--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -103,20 +103,26 @@
 }
 
 @media (max-width: 760px) {
+    .about {
+        width: 100vw;
+        margin: 0;
+    }
+    
     .about-box {
         display: flex;
         flex-direction: column;
         background-image: none;
         box-shadow: none;
         align-items: center;
-        justify-content: center;
-        margin: 20px auto;
+        margin: 2em 0;
     }
 
     .about-text {
         order: 2;
         margin: 0;
         font-size: 16px;
+        width: 90vw;
+        margin-left: 20vw;
     }
 
     .about-img {
@@ -129,12 +135,20 @@
     }
 
     .bernardo-ramalhete {
-        margin: -60px;
+        margin: 0;
+        width: 100vw;
     }
 
     .about-contact {
         bottom: 0;
         width: 90vw;
-        margin-left: 10vw;
+    }
+
+    .about-contact-info {
+    }
+
+    .about-contact-item {
+        font-size: 0.9em;
+        white-space: nowrap
     }
 }
