--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -107,32 +107,31 @@
 
 @media (max-width: 760px) {
     .cards-section {
-        margin: 0px;
+        margin-top: 5em;
         margin-bottom: -900px;
-        width: 100vw;
+        width: 90vw;
     }
     
     .card-row{
-        width: 100vw;
-        margin: 0px;
+        width: 50vw;
+        margin: 0;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-auto-rows: minmax(100px, auto);
-        column-gap: 10px;
+        column-gap: 20px;
         row-gap: 20px;
     }
 
-    .card-row2 {
-        top: 0px;
+    .card-face {
+        width: 11em;
+        height: 8em; 
     }
 
-    .card-face {
-        width: 200px;
-        height: 145px; 
+    .card:hover .card-face.front {
+        transform: translateY(100px);
     }
 
     .card-face.back {
-        transform: translateY(-50px);
+        display: none;
     }
 
     .card-icon {
