--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,7 +29,8 @@ body {
 
 @media (max-width: 760px) {
     .section-title {
-        margin-top: 40px;
+        margin-top: 5vh;
+        font-size: 1.5em;
     }
 }
 
