--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -207,41 +207,46 @@
   }
 
   @media (max-width: 760px) {
+
         .ProjectsBody {
-            margin-left: 0;
+            margin: 0;
             width: 100vw;
+            min-width: 0;
         }
 
       .projects-holder {
           width: 100vw;
           min-width: 0;
           position: absolute;
-          bottom: -120vh;
+          bottom: -200vh;
           left: 0;
-          margin: 20px;
-          margin-top: 2vh
+          top: 10%;
+          
       }
 
       .project-arrows {
-          position:relative;
+          position:absolute;
+          left: 0;
           top: 55vh;
-          right: 10vw;
-          width: 120vw;
+          width: 100vw;
       }
 
       .project-container {
           width: 100vw;
           justify-content: center;
-          margin-top: 20vh;
+          position: relative;
+          bottom: 30vh
       }
 
       .project-title {
-        font-size: 60px;
-        margin-bottom: -20px;
+        font-size: 50px;
+        position: relative;
+        top: 4em;
+        margin-bottom: 3em;
       }
 
       .project-body {
-          min-width: 760px;
+          min-width: 0px;
           justify-content: center;
       }
 
@@ -255,6 +260,16 @@
       .project-description {
           width: 100vw;
           margin: 20px;
+      }
+
+      .project-icons {
+        margin-top: 1vh;
+        margin-left: 5vh;
+        display: grid;
+        width: 100vw;
+        column-gap: 1em;
+        row-gap: 1em;
+        grid-template-columns: repeat(3, 1fr);
       }
 
       .project-info-cellphone {
