--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -115,6 +115,7 @@
     .card-row{
         width: 50vw;
         margin: 0;
+        margin-left: 5vw;
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 20px;
@@ -140,10 +141,13 @@
     }
 
     .techs {
-        margin: 20px;
-        position: relative;
-        left: 50%;
-        bottom: 300px;
-        transform: rotate(90deg)
+        font-size: 70px !important; 
+        width: 100vw;
+        z-index: 10;
+        display: flex;
+        justify-content: flex-end;
+        margin: 0;
+        margin-top: 0px !important;
+        margin-bottom: -90px !important;
     }
 }
