--- a/src/styles/menu-modal.css
+++ b/src/styles/menu-modal.css
@@ -23,6 +23,7 @@
     box-shadow: 
     -8px -8px 32px #0e0e48,
     8px 8px 32px #1b1b88;
+    height: 900px;
 }
 
 .modal-open {
@@ -89,14 +90,14 @@
 @media (max-width: 760px) {
     .modal-overlay {
         height: 500%;
-        width: 100%;
+        width: 100vw;
     }
 
     .menu-modal {
-        width: 100%;
-        height: 130%;
+        width: 100vw;
+        height: 160%;
         position: absolute;
-        top: 10%;
+        top: 5%;
         left: 0;
     }
 
@@ -105,7 +106,9 @@
     }
 
     .modal-close-icon {
-        margin: 20px 40%;
+        position: relative;
+        bottom: 7vh;
+        margin: 0px 40%;
         padding: 10px;
         background-color: #e03c78; 
         color: #efe9e7;
