--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -237,7 +237,7 @@
           width: 100vw;
           justify-content: center;
           position: relative;
-          bottom: 30vh
+          bottom: 250px;
       }
 
       .project-title {
