fixed the following issues: menu modal not readable when hovered in dark mode, menu modal out click not closing the modal when clicking in the lower section off page, animation in the icons when hovering project img being broken when hovering in the middle of the image, dark mode not holding status when changing pages

--- a/src/styles/menu-modal-white.css
+++ b/src/styles/menu-modal-white.css
@@ -15,7 +15,7 @@
 }
 
 
-.menu-modal-option:hover {
+.menu-modal-option-white:hover {
     color: #1818187a;
     background-color: transparent;
     border: 2px solid transparent;
