--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 body { 
     background: linear-gradient(#02020a 60%, #0d0d40) no-repeat center center fixed;
     -webkit-background-size: cover;
