--- a/src/styles/menu-modal.css
+++ b/src/styles/menu-modal.css
@@ -1,8 +1,12 @@
+
+
 .modal-overlay {
+    margin-top: -130px;
     position: absolute;
     left: 0;
-    top: 0;
-    height: 100%;
+    top: -50;
+    height: 165%;
+    overflow: hidden;
     width: 100%;
     z-index: 97;
     display: none;
@@ -73,6 +77,7 @@
 .menu-modal-option:hover {
     background-color: transparent;
     border: 2px solid #EFE9E7;
+    color: #efe9e7;
     box-shadow: 
         4px 4px 20px #02020a inset,
         -8px -8px 20px #0e0e48 inset
