--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,24 +1,22 @@
 .cards-section {
+    margin: 0 auto;
     margin-top: 150px;
+    width: 95vw;
 }
 
-.card-row,
-.card-row2 {
+.card-row{
     width: 90%;
-    margin: 50px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.card-row2 {
-    position: relative;
-    top: -100px;
-    margin-bottom: -100px;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
 }
 
 .card {
-    position: relative;
+    width: 300px;
+    height: 300px;
     border-radius: 8px;
+    margin: 0 auto;
 }
 
 .card-face {
@@ -107,29 +105,35 @@
 
 @media (max-width: 760px) {
     .cards-section {
-        margin-top: 5em;
-        margin-bottom: -900px;
-        width: 90vw;
+        margin: 0 auto;
+        width: 100vw;
     }
     
     .card-row{
-        width: 100vw;
-        margin: 0 auto;
+        width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        justify-content: space-between;
         column-gap: 20px;
         row-gap: 20px;
-        position: relative;
-        left: -3%;
+    }
+
+    .card {
+        width: auto;
+        height: auto;
     }
 
     .card-face {
-        width: 11em;
+        width: 45vw;
         height: 8em; 
     }
 
+    .card-face.front {
+        transform: none;
+    }
+
     .card:hover .card-face.front {
-        transform: translateY(100px);
+        transform: none;
     }
 
     .card-face.back {
@@ -144,7 +148,7 @@
     .techs {
         font-size: 70px !important; 
         width: 100vw;
-        z-index: 10;
+        z-index: 1000000;
         display: flex;
         justify-content: flex-end;
         margin: 0;
