--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -93,6 +93,21 @@
     transition: all 0.2s ease-in-out;
 }
 
+.github-link {
+    display: block;
+    margin-left: 20px;
+    margin-top: 15px;
+    text-decoration: none;
+    color: #e03c78;
+    width: fit-content;
+    transition: all 0.4s ease;
+}
+
+.github-link:hover {
+    color: #efe9e7;
+    border-bottom: 1px solid #efe9e7;
+}
+
 @media (max-width: 760px) {
     .HomePageBody {
         width: 90vw;
@@ -117,5 +132,9 @@
         margin: 0;
         margin-top: 50px;
         margin-left: 5vw
+    }
+
+    .github-link {
+        margin-left: 8.5vw
     }
 }
