--- a/src/styles/homepagewhite.css
+++ b/src/styles/homepagewhite.css
@@ -31,6 +31,15 @@
         inset 0px 0px 0px 0px #f9f9f9;
 }
 
+.github-link-white {
+    color: #aa9ad3;
+}
+
+.github-link-white:hover {
+    color: #8b72c9;
+    border-bottom: 1px solid #8b72c9;
+}
+
 @media (max-width: 760px) {
     .HomePageBody {
         width: 90vw;
