--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -82,6 +82,7 @@
     box-shadow: 0 20px 50px #0000002a;
     transform: translateY(-100px);
     border-radius: 8px;
+    font-family: 'Manrope'; 
 }
 
 .card:hover .card-face.back {
