--- a/src/styles/projects-white.css
+++ b/src/styles/projects-white.css
@@ -8,7 +8,8 @@
 
 .project-img1-white,
 .project-img2-white,
-.project-img3-white {
+.project-img3-white,
+.project-img4-white {
     color: #f9f9f9;
     transition: all 0.5s ease;
 }
@@ -26,10 +27,16 @@
     background-size: cover
 }
 
+.project-img4-white {
+    background-image: linear-gradient(to top, #1818189a 25%, transparent), linear-gradient(to bottom, #1818183a 25%, transparent), url('../images/ecommerce-webapp.png');
+}
+
 .project-img1-white:hover,
 .project-img2-white:hover,
-.project-img3-white:hover {
+.project-img3-white:hover,
+.project-img4-white:hover {
     box-shadow: inset 0px -10px 0px #e2adc0;
+    transition: all 0.5s ease;
     
 }
 
@@ -45,6 +52,10 @@
 .project-img3-white:hover {
     background-image: linear-gradient(to top, #181818, transparent), url('../images/chat-app.png');
     
+}
+
+.project-img4-white:hover {
+    background-image: linear-gradient(to top, #181818, transparent), url('../images/ecommerce-webapp.png')
 }
 
 .left-arrow-white:hover {
@@ -78,9 +89,14 @@
         background-image: url('../images/netflix-clone.png');
       }
       .project-img2 {
-        background-image: url('../images/paola-ramalhete-correct-size.png')
+        background-image: url('../images/paola-ramalhete-correct-size.png');
       }
       .project-img3 {
-        background-image: url('../images/chat-app.png')
+        background-image: url('../images/chat-app.png');
+        background-size: 100%;
+      }
+      .project-img4 {
+        background-image: url('../images/ecommerce-no-title.png')
+
       }
   }
